alterando index.html

--- a/EShop.Web/wwwroot/index.html
+++ b/EShop.Web/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Eshop</title>
     <!--<base href="/" />-->
-    <base href="https://italomangueira.githubpages.io/Eshop" />
+    <base href="https://italomangueira.github.io/Eshop" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="EShop.Web.styles.css" rel="stylesheet" />
